test/spec_vectors/i32/fail/module_43.wat
(module (func $type-binary-1st-operand-empty-in-local.set (local i32) (local.set 0 (i32.add)) (local.get 0) (drop)))